--- a/ci-build-stack.yml
+++ b/ci-build-stack.yml
@@ -7,20 +7,9 @@ Parameters:
     Description: S3 Bucket Name containing Lambda code
     Type: String
 
-  CodeS3KeyConfig:
-    Description: Codebuild config file's path in S3
+  CodeS3PrefixConfig:
+    Description: S3 prefix containing the configuration files
     Type: String
-    Default: ci-pipeline/ci-build-config.zip
-
-  CodeS3KeyLambdaPipeline:
-    Description: Pipeline Lambda package's path in S3
-    Type: String
-    Default: ci-pipeline/ci-build-trigger.zip
-
-  CodeS3KeyLambdaAuthorize:
-    Description: Authorizer Lambda package's path in S3
-    Type: String
-    Default: ci-pipeline/ci-build-authorizer.zip
 
   # Code repo config
   RepoAccount:
@@ -102,7 +91,7 @@ Resources:
                   - ""
                   - - "arn:aws:apigateway:"
                     - !Ref "AWS::Region"
-                    - ":lambda:path//2015-03-31/functions/"
+                    - ":lambda:path/2015-03-31/functions/"
                     - !GetAtt [LambdaPipelineFunction, Arn]
                     - "/invocations"
         securityDefinitions:
@@ -190,7 +179,7 @@ Resources:
       Timeout: 25
       Code:
         S3Bucket: !Ref S3BucketName
-        S3Key: !Ref CodeS3KeyLambdaAuthorize
+        S3Key: !Sub "${CodeS3PrefixConfig}/ci-build-authorizer.zip"
 
   LambdaAuthorizerExecutionRole:
     Type: "AWS::IAM::Role"
@@ -238,7 +227,7 @@ Resources:
           CODEBUILD_PROJECT_NAME: !Sub "${AWS::StackName}-build"
       Code:
         S3Bucket: !Ref S3BucketName
-        S3Key: !Ref CodeS3KeyLambdaPipeline
+        S3Key: !Sub "${CodeS3PrefixConfig}/ci-build-trigger.zip"
       Runtime: "python2.7"
       Timeout: 300
 
@@ -311,7 +300,7 @@ Resources:
         # Hack: set it as S3 to avoid the GitHub config & auth setup
         # (this is done at runtime by code in the buildspec itself)
         Type: S3
-        Location: !Sub "arn:aws:s3:::${S3BucketName}/${CodeS3KeyConfig}"
+        Location: !Sub "arn:aws:s3:::${S3BucketName}/${CodeS3PrefixConfig}/ci-build-config.zip"
 
   BuildProjectRole:
     Type: AWS::IAM::Role
@@ -364,7 +353,7 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource:
-                  - !Sub "arn:aws:s3:::${S3BucketName}/${CodeS3KeyConfig}"
+                  - !Sub "arn:aws:s3:::${S3BucketName}/${CodeS3PrefixConfig}/ci-build-config.zip"
               # KMS to read S3 encrypted content
               - Effect: "Allow"
                 Action:
@@ -372,19 +361,6 @@ Resources:
                   - "kms:Encrypt"
                   - "kms:GenerateDataKey"
                   - "kms:ReEncrypt"
-                Resource: '*'
-              # Allow actions with ECR
-              - Effect: Allow
-                Action:
-                    - "ecr:GetAuthorizationToken"
-                    - "ecr:GetDownloadUrlForLayer"
-                    - "ecr:BatchGetImage"
-                    - "ecr:BatchCheckLayerAvailability"
-                    - "ecr:PutImage"
-                    - "ecr:DescribeImages"
-                    - "ecr:UploadLayerPart"
-                    - "ecr:InitiateLayerUpload"
-                    - "ecr:CompleteLayerUpload"
                 Resource: '*'
 
 Outputs:
